src/test/deca/context/invalid/SansObjet/DeclVar-LE-float-int-int.deca
// Description:
//    Declaration of a float variable using <= operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  3; 
    int y = 2; 
    float z = 3 <= 2; 
}
